--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>SouJunior Labs</title>
+  <title>SouJunior: Stars</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7597091185548852"
                 crossorigin="anonymous"></script>
 </head>
