--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script
-    type="module"
-    src="/src/main.js"
-  ></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
